--- a/index.html
+++ b/index.html
@@ -1,1 +1,106 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Media Aggregator</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        .search-form {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+        .search-form input,
+        .search-form select,
+        .search-form button {
+            margin: 5px;
+            padding: 10px;
+            font-size: 16px;
+        }
+        .results-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .result-card {
+            background: #fff;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            padding: 15px;
+            text-align: center;
+        }
+        .result-card img,
+        .result-card video {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+        }
+        .result-card a {
+            display: block;
+            margin-top: 10px;
+            font-weight: bold;
+            color: #007BFF;
+            text-decoration: none;
+        }
+        .result-card a:hover {
+            text-decoration: underline;
+        }
+        .error {
+            color: red;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Media Aggregator</h1>
+        <form class="search-form" method="POST">
+            <input type="text" name="keyword" placeholder="Enter keyword" required>
+            <input type="number" name="limit" value="10" min="1" placeholder="Limit" required>
+            <select name="source" required>
+                <option value="reddit">Reddit</option>
+                <option value="simpcity">Simpcity.su</option>
+                <option value="spankbang">Spankbang.com</option>
+            </select>
+            <button type="submit">Search</button>
+        </form>
 
+        {% if error %}
+            <p class="error">{{ error }}</p>
+        {% endif %}
+
+        <div class="results-grid">
+            {% for result in results %}
+                <div class="result-card">
+                    {% if result.media_type == 'image' %}
+                        <img src="{{ result.url }}" alt="{{ result.title }}">
+                    {% elif result.media_type == 'video' %}
+                        <video controls>
+                            <source src="{{ result.url }}" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    {% else %}
+                        <a href="{{ result.url }}" target="_blank">{{ result.title }}</a>
+                    {% endif %}
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+</body>
+</html>
